# metatool

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
src/: StructVisitor.hpp  StructVisitor_copy.hpp  main.cpp  metatool.hpp  types.hpp
templ8-parser/: .gitignore  CMakeLists.txt  Templ8.cpp  Templ8.hpp  Visitor.cpp  Visitor.h  main.cpp  templ8.g4  test.templ8
templ8-parser/parser/: templ8.interp  templ8.tokens  templ8BaseVisitor.cpp  templ8BaseVisitor.h  templ8Lexer.cpp  templ8Lexer.h  templ8Lexer.interp  templ8Lexer.tokens  templ8Parser.cpp  templ8Parser.h  templ8Visitor.cpp  templ8Visitor.h
templates/: entt-registry.xml  metastuff.xml  nlohmann-json.t8  nlohmann-json.xml  sol2-lua.xml  test.t8
templates/metastuff/: file  member  specialization
test/: test.cpp
